--- a/mergingSatData.ipynb
+++ b/mergingSatData.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 296,
    "metadata": {
     "scrolled": true
    },
@@ -427,13 +427,13 @@
      "text": [
       "Paste the following address into a web browser:\n",
       "\n",
-      "    https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=NO7ZJ73JOLxULOTWystqQ0COrLnYpXUWu8wXqmljx0I&tc=QolrWupX9V-DqtEdeb-L87njuM6nKZF6EDVzGPTKLvE&cc=unD1cSyUGcpnFCEH1DKEmE7I0ENxRm77WQ1hO1SCP9I\n",
+      "    https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=WexqNmLw04AmJYa1nXDRQKg29SPre5FiM2mdEcP1lDA&tc=aeaqR7ApCRjZNMQ4JBeSDm6eNKn5tCFEMQUua0amdHw&cc=2j5uQlq1-fio2_AR7PK57LRistrUxE42g_D4f22b0I8\n",
       "\n",
       "On the web page, please authorize access to your Earth Engine account and copy the authentication code. Next authenticate with the following command:\n",
       "\n",
-      "    earthengine authenticate --code-verifier=NO7ZJ73JOLxULOTWystqQ0COrLnYpXUWu8wXqmljx0I:mbGkmpHQ895Q-9DzQxF9bMebPz1O8AnfKEhR582mNNw:-tDMnOb5Kev21y5Utv0gTRfHmF3wPor71F2Ew4l69tQ --authorization-code=PLACE_AUTH_CODE_HERE\n",
+      "    earthengine authenticate --code-verifier=WexqNmLw04AmJYa1nXDRQKg29SPre5FiM2mdEcP1lDA:0F2EcRRBuTi3Y9CiDregeBXR6iAEmNyvePXiJKcpN_o:nNtjQD-QzUl0PZsA6d3rCR9TmOjNLPMQI8CzVzFhKkA --authorization-code=PLACE_AUTH_CODE_HERE\n",
       "\n",
-      "Enter verification code: 4/1ARtbsJo9G5RPMr-UtapIv8ZL6_KiHj3yAYLc5Jomi8hJ5acvrhfI4FThilc\n",
+      "Enter verification code: 4/1ARtbsJqu6WPQF9r2aMnuRRzUTmfm4ORJeGsGmOB-YHAIPS9MjQgHrx7nLJY\n",
       "\n",
       "Successfully saved authorization token.\n"
      ]
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
     "        if df.shape[0] > 1:\n",
     "            time_deltas = {}\n",
     "            for i in range(df.shape[0]):\n",
-    "                time_deltas[i] = np.abs((df['datetime'].values[i] - test['datetime_modis']).values)\n",
+    "                time_deltas[i] = np.abs((df['datetime'].values[i] - row['datetime_modis']))\n",
     "            ind = min(time_deltas, key=time_deltas.get)\n",
     "            row['SR_B1'] = df.iloc[ind,]['SR_B1']\n",
     "            row['SR_B2'] = df.iloc[ind,]['SR_B2']\n",
@@ -527,27 +527,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
-    "icesat_modis = icesat_modis.reset_index(drop=True)"
+    "icesat_modis = icesat_modis.reset_index(drop=True)\n",
+    "icesat_modis = icesat_modis.iloc[:250000,]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c830974fffa47ecb4e28dc9876eec05",
+       "model_id": "26bc060e4f404e4aaa58a54b690b7802",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Pandas Apply:   0%|          | 0/855851 [00:00<?, ?it/s]"
+       "Pandas Apply:   0%|          | 0/250000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -560,9 +561,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 308,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(123441, 28)"
+      ]
+     },
+     "execution_count": 308,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "icesat_modis_landsat = icesat_modis_landsat.dropna()\n",
     "icesat_modis_landsat.shape"
@@ -570,11 +582,273 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
-    "icesat_modis_landsat.to_pickle('./files/all_merged_sat_data.pkl')"
+    "icesat_modis_landsat.to_pickle('./files/merged_sat_data_first250k.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lats</th>\n",
+       "      <th>lons</th>\n",
+       "      <th>datetime_modis</th>\n",
+       "      <th>datetime_icesat</th>\n",
+       "      <th>heights</th>\n",
+       "      <th>chlor_a</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>distance_meters_icesat_modis</th>\n",
+       "      <th>time_diff_icesat_modis</th>\n",
+       "      <th>day</th>\n",
+       "      <th>...</th>\n",
+       "      <th>start_year</th>\n",
+       "      <th>end_year</th>\n",
+       "      <th>SR_B1</th>\n",
+       "      <th>SR_B2</th>\n",
+       "      <th>SR_B3</th>\n",
+       "      <th>SR_B4</th>\n",
+       "      <th>SR_B5</th>\n",
+       "      <th>SR_B7</th>\n",
+       "      <th>QA_PIXEL</th>\n",
+       "      <th>datetime_landsat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-14.328735</td>\n",
+       "      <td>144.852555</td>\n",
+       "      <td>2020-08-14 20:55:00</td>\n",
+       "      <td>2018-10-19 05:43:13</td>\n",
+       "      <td>-14.017767</td>\n",
+       "      <td>0.399796</td>\n",
+       "      <td>0.000992</td>\n",
+       "      <td>110.095998</td>\n",
+       "      <td>665 days 15:11:47</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>8659.0</td>\n",
+       "      <td>9541.0</td>\n",
+       "      <td>10982.0</td>\n",
+       "      <td>9817.0</td>\n",
+       "      <td>7178.0</td>\n",
+       "      <td>7573.0</td>\n",
+       "      <td>21952.0</td>\n",
+       "      <td>2020-08-12 20:27:57.749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-14.328734</td>\n",
+       "      <td>144.852554</td>\n",
+       "      <td>2020-08-14 20:55:00</td>\n",
+       "      <td>2018-10-19 05:43:13</td>\n",
+       "      <td>1.471302</td>\n",
+       "      <td>0.399796</td>\n",
+       "      <td>0.000991</td>\n",
+       "      <td>110.053046</td>\n",
+       "      <td>665 days 15:11:47</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>8659.0</td>\n",
+       "      <td>9541.0</td>\n",
+       "      <td>10982.0</td>\n",
+       "      <td>9817.0</td>\n",
+       "      <td>7178.0</td>\n",
+       "      <td>7573.0</td>\n",
+       "      <td>21952.0</td>\n",
+       "      <td>2020-08-12 20:27:57.749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-14.328704</td>\n",
+       "      <td>144.852551</td>\n",
+       "      <td>2020-08-14 20:55:00</td>\n",
+       "      <td>2018-10-19 05:43:13</td>\n",
+       "      <td>-20.322205</td>\n",
+       "      <td>0.399796</td>\n",
+       "      <td>0.000976</td>\n",
+       "      <td>108.289021</td>\n",
+       "      <td>665 days 15:11:47</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>8659.0</td>\n",
+       "      <td>9541.0</td>\n",
+       "      <td>10982.0</td>\n",
+       "      <td>9817.0</td>\n",
+       "      <td>7178.0</td>\n",
+       "      <td>7573.0</td>\n",
+       "      <td>21952.0</td>\n",
+       "      <td>2020-08-12 20:27:57.749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-14.328659</td>\n",
+       "      <td>144.852547</td>\n",
+       "      <td>2020-08-14 20:55:00</td>\n",
+       "      <td>2018-10-19 05:43:13</td>\n",
+       "      <td>-21.377756</td>\n",
+       "      <td>0.399796</td>\n",
+       "      <td>0.000954</td>\n",
+       "      <td>105.884897</td>\n",
+       "      <td>665 days 15:11:47</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>8659.0</td>\n",
+       "      <td>9541.0</td>\n",
+       "      <td>10982.0</td>\n",
+       "      <td>9817.0</td>\n",
+       "      <td>7178.0</td>\n",
+       "      <td>7573.0</td>\n",
+       "      <td>21952.0</td>\n",
+       "      <td>2020-08-12 20:27:57.749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-14.328646</td>\n",
+       "      <td>144.852545</td>\n",
+       "      <td>2020-08-14 20:55:00</td>\n",
+       "      <td>2018-10-19 05:43:13</td>\n",
+       "      <td>-8.550291</td>\n",
+       "      <td>0.399796</td>\n",
+       "      <td>0.000948</td>\n",
+       "      <td>105.201120</td>\n",
+       "      <td>665 days 15:11:47</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>8659.0</td>\n",
+       "      <td>9541.0</td>\n",
+       "      <td>10982.0</td>\n",
+       "      <td>9817.0</td>\n",
+       "      <td>7178.0</td>\n",
+       "      <td>7573.0</td>\n",
+       "      <td>21952.0</td>\n",
+       "      <td>2020-08-12 20:27:57.749</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        lats        lons      datetime_modis     datetime_icesat    heights  \\\n",
+       "0 -14.328735  144.852555 2020-08-14 20:55:00 2018-10-19 05:43:13 -14.017767   \n",
+       "1 -14.328734  144.852554 2020-08-14 20:55:00 2018-10-19 05:43:13   1.471302   \n",
+       "2 -14.328704  144.852551 2020-08-14 20:55:00 2018-10-19 05:43:13 -20.322205   \n",
+       "3 -14.328659  144.852547 2020-08-14 20:55:00 2018-10-19 05:43:13 -21.377756   \n",
+       "4 -14.328646  144.852545 2020-08-14 20:55:00 2018-10-19 05:43:13  -8.550291   \n",
+       "\n",
+       "    chlor_a  distance  distance_meters_icesat_modis time_diff_icesat_modis  \\\n",
+       "0  0.399796  0.000992                    110.095998      665 days 15:11:47   \n",
+       "1  0.399796  0.000991                    110.053046      665 days 15:11:47   \n",
+       "2  0.399796  0.000976                    108.289021      665 days 15:11:47   \n",
+       "3  0.399796  0.000954                    105.884897      665 days 15:11:47   \n",
+       "4  0.399796  0.000948                    105.201120      665 days 15:11:47   \n",
+       "\n",
+       "  day  ... start_year end_year   SR_B1   SR_B2    SR_B3   SR_B4   SR_B5  \\\n",
+       "0  14  ...       2020     2020  8659.0  9541.0  10982.0  9817.0  7178.0   \n",
+       "1  14  ...       2020     2020  8659.0  9541.0  10982.0  9817.0  7178.0   \n",
+       "2  14  ...       2020     2020  8659.0  9541.0  10982.0  9817.0  7178.0   \n",
+       "3  14  ...       2020     2020  8659.0  9541.0  10982.0  9817.0  7178.0   \n",
+       "4  14  ...       2020     2020  8659.0  9541.0  10982.0  9817.0  7178.0   \n",
+       "\n",
+       "    SR_B7 QA_PIXEL        datetime_landsat  \n",
+       "0  7573.0  21952.0 2020-08-12 20:27:57.749  \n",
+       "1  7573.0  21952.0 2020-08-12 20:27:57.749  \n",
+       "2  7573.0  21952.0 2020-08-12 20:27:57.749  \n",
+       "3  7573.0  21952.0 2020-08-12 20:27:57.749  \n",
+       "4  7573.0  21952.0 2020-08-12 20:27:57.749  \n",
+       "\n",
+       "[5 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 310,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "icesat_modis_landsat.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['2020', '2018', '2019', '2021'], dtype=object)"
+      ]
+     },
+     "execution_count": 311,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "icesat_modis_landsat['end_year'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['lats', 'lons', 'datetime_modis', 'datetime_icesat', 'heights',\n",
+       "       'chlor_a', 'distance', 'distance_meters_icesat_modis',\n",
+       "       'time_diff_icesat_modis', 'day', 'month', 'year', 'end_day',\n",
+       "       'query_start_date', 'query_end_date', 'start_day', 'start_month',\n",
+       "       'end_month', 'start_year', 'end_year', 'SR_B1', 'SR_B2', 'SR_B3',\n",
+       "       'SR_B4', 'SR_B5', 'SR_B7', 'QA_PIXEL', 'datetime_landsat'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 312,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "icesat_modis_landsat.columns"
    ]
   },
   {
