Update and rename chlor_a.ipynb to chlorophyll_feature_analysis.ipynb

--- a/chlorophyll_feature_analysis.ipynb
+++ b/chlorophyll_feature_analysis.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# <center><font color=DarkBlue>Exploratory Analysis on Chlorophyll A Concentration Data from MODIS</center>\n",
-    "### <center><font color=DarkRed>University of Rochester</center> <font color=DarkRed>"
+    "### <center><font color=DarkRed>Mohamad Ali Kalassina - University of Rochester</center> <font color=DarkRed>"
    ]
   },
   {
